--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>Native project</title>
     <link rel="stylesheet" href="./Styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h2>JSON-Market</h2>
+      <button class="registerUser-modal">Register</button>
+      <button class="loginUser-modal">Login</button>
+      <button class="logoutUser-btn">Logout</button>
+      <span></span>
+      <input type="text" />
+    </nav>
+    <div class="modal">
+      <h3>Register</h3>
+      <form id="registerUser-form">
+        <label>
+          Username:
+          <input id="username" type="text" />
+        </label>
+        <label>
+          Email:
+          <input id="email" type="email" />
+        </label>
+        <label>
+          Age:
+          <input id="age" type="number" />
+        </label>
+        <label>
+          Password:
+          <input id="password" type="password" />
+        </label>
+        <label>
+          Password confirmation:
+          <input id="passwordConfirm" type="password" />
+        </label>
+        <button type="reset">Cancel</button>
+        <button>Register</button>
+      </form>
+    </div>
+  </body>
   <script src="./JS/main.js"></script>
 </html>
