--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
           Password confirmation:
           <input id="passwordConfirm" type="password" />
         </label>
-        <button type="reset">Cancel</button>
-        <button>Register</button>
+        <div class="registerButtonWrapper">
+          <button>Register</button>
+          <button type="reset">Cancel</button>
+        </div>
       </form>
     </div>
+    <div class="messageBox"></div>
   </body>
   <script src="./JS/main.js"></script>
 </html>
