--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         </div>
       </form>
     </div>
+
+    <div class="login-modal">
+      <h3>Sign in</h3>
+      <form id="loginUser-form">
+        <label>Username:<input id="username-login" type="text" /> </label>
+        <label>Password:<input id="password-login" type="password" /> </label>
+        <div class="registerButtonWrapper">
+          <button>Login</button>
+          <button type="reset">Cancel</button>
+        </div>
+      </form>
+    </div>
     <div class="messageBox"></div>
   </body>
   <script src="./JS/main.js"></script>
