--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <nav class="navbar">
       <h2>JSON-Market</h2>
+      <span id="user-nav"></span>
       <div class="buttons">
         <button class="registerUser-modal">Register</button>
         <button class="loginUser-modal">Login</button>
         <button class="logoutUser-btn">Logout</button>
-        <span></span>
         <input class="search" type="text" placeholder="search" />
       </div>
     </nav>
