--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button class="loginUser-modal">Login</button>
         <button class="logoutUser-btn">Logout</button>
         <input class="search" type="text" placeholder="search" />
+        <select name="" id="categorySel"></select>
       </div>
     </nav>
     <div class="modal-register">
@@ -60,6 +61,7 @@
         <form id="addProduct-form">
           <label>Title:<input id="title" type="text" /> </label>
           <label>Description:<input id="desc" type="text" /> </label>
+          <label>Category:<input id="category" type="text" /> </label>
           <label>Price: <input id="price" type="number" /> </label>
           <label>Image:<input id="image" type="url" /> </label>
           <div class="registerButtonWrapper">
@@ -76,6 +78,7 @@
         <form id="editProduct-form">
           <label>Title:<input id="titleEdit" type="text" /> </label>
           <label>Description:<input id="descEdit" type="text" /> </label>
+          <label>Category:<input id="categoryEdit" type="text" /> </label>
           <label>Price: <input id="priceEdit" type="number" /> </label>
           <label>Image:<input id="imageEdit" type="url" /> </label>
           <div class="registerButtonWrapper">
@@ -88,6 +91,10 @@
 
     <div class="messageBox"></div>
     <div id="products"></div>
+    <div class="pagination">
+      <button class="prev">Prev</button>
+      <button class="next">Next</button>
+    </div>
   </body>
   <script src="./JS/main.js"></script>
 </html>
